// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`theme-diff snapshots > token-diff table: bengali-alpona → bengali-alpona 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: bengali-alpona → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B7442A",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F5E9C9",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2C1005",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cinzel",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Merriweather",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "alpona",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → boho-destination 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: boho-destination → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#B25E3C",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#EAC9A3",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2E1608",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "boho",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → christian-chapel 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: christian-chapel → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#EDDBD3",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#6E7F5B",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A1E1B",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "cross",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → goa-beach 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: goa-beach → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0E7C86",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F4A26D",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0A2F33",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Fraunces",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Poppins",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "waves",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → kerala-backwaters 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: kerala-backwaters → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#0F5A3A",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C79A3E",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#0B2417",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "palm",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → marwari-haveli 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: marwari-haveli → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#D46C82",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#7A2E4A",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#3A0F1E",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "haveli",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → modern-minimal 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: modern-minimal → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#F6F1EA",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#C6A55A",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#1A1815",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Playfair Display",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "arch",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → punjabi-anand-karaj 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: punjabi-anand-karaj → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#E38B1F",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#8B1E3F",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A140A",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Inter",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "khanda",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → royal-rajput 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: royal-rajput → south-indian-temple 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#5B0A17",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#E7B24B",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0810",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Cormorant Garamond",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Cormorant",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "mandala",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → bengali-alpona 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#B7442A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#F5E9C9",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#2C1005",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cinzel",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Merriweather",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "alpona",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → boho-destination 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#B25E3C",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#EAC9A3",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#2E1608",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "boho",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → christian-chapel 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#EDDBD3",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#6E7F5B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#2A1E1B",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "cross",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → goa-beach 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#0E7C86",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#F4A26D",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#0A2F33",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Fraunces",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Poppins",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "waves",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → kerala-backwaters 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#0F5A3A",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#C79A3E",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#0B2417",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "palm",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → marwari-haveli 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#D46C82",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#7A2E4A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#3A0F1E",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "haveli",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → modern-minimal 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#F6F1EA",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#C6A55A",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#1A1815",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Playfair Display",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "arch",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → punjabi-anand-karaj 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#E38B1F",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#8B1E3F",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#2A140A",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Inter",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "khanda",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → royal-rajput 1`] = `
[
  {
    "changed": true,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#5B0A17",
  },
  {
    "changed": true,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#E7B24B",
  },
  {
    "changed": true,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#2A0810",
  },
  {
    "changed": true,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Cormorant Garamond",
  },
  {
    "changed": true,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Cormorant",
  },
  {
    "changed": true,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "mandala",
  },
]
`;

exports[`theme-diff snapshots > token-diff table: south-indian-temple → south-indian-temple 1`] = `
[
  {
    "changed": false,
    "field": "primary",
    "from": "#8B1B1F",
    "isColor": true,
    "to": "#8B1B1F",
  },
  {
    "changed": false,
    "field": "accent",
    "from": "#F2C14E",
    "isColor": true,
    "to": "#F2C14E",
  },
  {
    "changed": false,
    "field": "ink",
    "from": "#2A0F10",
    "isColor": true,
    "to": "#2A0F10",
  },
  {
    "changed": false,
    "field": "displayFont",
    "from": "Yeseva One",
    "isColor": false,
    "to": "Yeseva One",
  },
  {
    "changed": false,
    "field": "bodyFont",
    "from": "Lora",
    "isColor": false,
    "to": "Lora",
  },
  {
    "changed": false,
    "field": "motif",
    "from": "temple",
    "isColor": false,
    "to": "temple",
  },
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → bengali-alpona 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: bengali-alpona → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → boho-destination 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: boho-destination → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → christian-chapel 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: christian-chapel → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → goa-beach 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: goa-beach → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → kerala-backwaters 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: kerala-backwaters → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → marwari-haveli 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
]
`;

exports[`theme-diff snapshots > what-will-change summary: marwari-haveli → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → modern-minimal 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: modern-minimal → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → punjabi-anand-karaj 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: punjabi-anand-karaj → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → royal-rajput 1`] = `[]`;

exports[`theme-diff snapshots > what-will-change summary: royal-rajput → south-indian-temple 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → bengali-alpona 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → boho-destination 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → christian-chapel 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → goa-beach 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → kerala-backwaters 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → marwari-haveli 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → modern-minimal 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → punjabi-anand-karaj 1`] = `
[
  "Theme preset",
  "Color palette",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → royal-rajput 1`] = `
[
  "Theme preset",
  "Color palette",
  "Display font",
  "Body font",
]
`;

exports[`theme-diff snapshots > what-will-change summary: south-indian-temple → south-indian-temple 1`] = `[]`;
